First working version

--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 </head>
 <body>
 
-<div style="margin-top: 500px">
-    <h1 id="effector">
-        ldgfhfghfghdfghdfgh
-        sfghdfghdfghdfghfdgh
-        sdfghdfghfdghfdghfdh
-
+<div style="margin-top: 300px">
+    <h1 class="effector">
+        This is a header of the first level
     </h1>
+    <h2 class="effector">
+        This is a header of the second level
+    </h2>
+
 </div>
-<script src="js/jQuery.textEffext.plugin.js"></script>
+<script src="js/jQuery.textEffect.plugin.js"></script>
 </body>
 </html>
