--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <title></title>
     <script src="js/lib/jquery/dist/jquery.js"></script>
+    <meta charset="utf-8"/>
 </head>
 <body>
 
 <div style="margin-top: 300px">
     <h1 class="effector">
-        This is a header of the first level
+        This is a first level header Это заголовок первого уровня
     </h1>
     <h2 class="effector">
-        This is a header of the second level
+        This is a second level header Это заголовок первого уровня
     </h2>
 
 </div>
