--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/html">
 <head>
-    <title></title>
-    <script src="js/lib/jquery/dist/jquery.js"></script>
     <meta charset="utf-8"/>
+    <title></title>
+    <link rel="stylesheet" href="css/styles.css"/>
+    <script src="js/lib/jquery/dist/jquery.js"></script>
+
 </head>
 <body>
 
-<div style="margin-top: 300px">
+<div>
     <h1 class="effector">
         This is a first level header Это заголовок первого уровня
     </h1>
     <h2 class="effector">
-        This is a second level header Это заголовок первого уровня
+        This is a second level header Это заголовок второго уровня
     </h2>
+    <h3 class="effector">
+        This is a second level header Это заголовок третьего уровня
+    </h3>
 
 </div>
 <script src="js/jQuery.textEffect.plugin.js"></script>
