--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8"/>
     <title></title>
     <link rel="stylesheet" href="css/styles.css"/>
-    <script src="js/lib/jquery/dist/jquery.js"></script>
-
+    <!--<script src="js/lib/jquery/dist/jquery.js"></script>-->
+    <script data-main="js/config-and-run" src="js/lib/requirejs/require.js"></script>
 </head>
 <body>
 
@@ -21,6 +21,6 @@
     </h3>
 
 </div>
-<script src="js/jQuery.textEffect.plugin.js"></script>
+<!--<script src="js/jQuery.textEffect.plugin.js"></script>-->
 </body>
 </html>
