removed comments block

--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
     <h3 class="effector">
         This is a second level header Это заголовок третьего уровня
     </h3>
+    <h1 class="effector">
+        This is a first level header Это заголовок первого уровня
+    </h1>
+    <h2 class="effector">
+        This is a second level header Это заголовок второго уровня
+    </h2>
+    <h3 class="effector">
+        This is a second level header Это заголовок третьего уровня
+    </h3>
 
 </div>
-<!--<script src="js/jQuery.textEffect.plugin.js"></script>-->
 </body>
 </html>
